[package]
name = "hermes"
version = "0.0.0"
authors = [
    "Gan Jun Kai <kuhn96@gmail.com>",
    "Wai Pai Lee <pailee.wai@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
